<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:background="#ECE8E8"
        android:id="@+id/iv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:src="@drawable/logofi" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_title"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_name" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/et_name"/>

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_last_name" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/tv_last_name"
        android:hint="@string/et_last_name"/>


    <TextView
        android:id="@+id/tv_num_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_last_name"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_num_account" />

    <EditText
        android:id="@+id/et_num_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_num_account"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/et_num_account"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_date_born"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/et_num_account"
        android:text="@string/tv_date_born" />

    <DatePicker
        android:id="@+id/dp_calendar"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@+id/tv_date_born">
    </DatePicker>

    <Spinner
        android:id="@+id/s_carrers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/dp_calendar" />

    <Button
        android:background="#A80707"
        android:id="@+id/btn_continue"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_carrers"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/btn_continue">

    </Button>

</RelativeLayout>