<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A80707"
    tools:context=".MainActivity">

    <ImageView
        android:background="#ECE8E8"
        android:id="@+id/iv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:src="@drawable/logofi" />

    <TextView
        android:id="@+id/tv_welcome"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_title"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/txt_welcome" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_name2"
        android:textColor="#FFFFFF"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/tv_welcome" />

    <TextView
        android:id="@+id/tv_num_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_num_example"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_below="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_age_example"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_below="@+id/tv_num_account" />

    <TextView
        android:id="@+id/tv_career"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_career_example"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="19sp"
        android:gravity="center"
        android:layout_below="@+id/tv_age" />

    <ImageView
        android:layout_below="@+id/tv_career"
        android:layout_width="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_height="250dp"
        android:src="@drawable/compu2"/>

</RelativeLayout>